<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checBox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="206dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="Digite seu login"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/senha"
        app:layout_constraintStart_toStartOf="@+id/textLogin"
        app:layout_constraintTop_toBottomOf="@+id/textLogin" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="185dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/salvar_informa_o_de_login"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <Button
        android:id="@+id/botão"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/entrar"
        app:cornerRadius="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textFluff"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="25dp"
        android:text="@string/digite_suas_credenciais_para_continuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="206dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Digite sua senha"
        android:inputType="text"
        android:password="true"
        app:layout_constraintBottom_toBottomOf="@+id/textSenha"
        app:layout_constraintStart_toStartOf="@+id/editLogin" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/editLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFluff" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="411dp"
        android:layout_height="136dp"
        android:background="#A4CC44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textTestemunho"
            android:layout_width="155dp"
            android:layout_height="35dp"
            android:layout_marginStart="226dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="31dp"
            android:text="@string/quot_gerenciador_de_senha_bom_da_peste_quot"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/usuarioTestemunho"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usuarioTestemunho"
            android:layout_width="156dp"
            android:layout_height="19dp"
            android:layout_marginEnd="30dp"
            android:text="@string/lyana"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTestemunho" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="171dp"
            android:layout_height="123dp"
            android:contentDescription="@string/logo_de_uma_chave"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textTestemunho"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_app" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>